# aiops-monitor

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
aiops_monitor/: __init__.py  client.py  config.py  handlers.py
aiops_monitor/integrations/: __init__.py  django.py  fastapi.py  flask.py
examples/: django_example.py  fastapi_example.py  flask_example.py
