[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiops-monitor"
version = "0.1.1"
description = "AI-powered log monitoring and auto-fix SDK"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Tuple"}
]
keywords = ["monitoring", "logging", "aiops", "auto-fix", "error-tracking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Flask",
    "Framework :: FastAPI",
]

dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
django = ["django>=3.2"]
flask = ["flask>=2.0.0"]
fastapi = ["fastapi>=0.68.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
]

[project.urls]
Homepage = "https://github.com/SunshineList/aiops-monitor"
Repository = "https://github.com/SunshineList/aiops-monitor"
Issues = "https://github.com/SunshineList/aiops-monitor/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aiops_monitor*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
